crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__annotation_interface_elements.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@interface Contract {
  String value() default "x"; // value marker

  int[] flags() default {
    /* start */
    1, // one
    2, /* two */
    3, // trailing
  };

  Nested nested() default @Nested(name = "demo", enabled = true);

  public abstract Class<?> type()[];

  class Helper {
    String name() {
      return "helper";
    }
  }

  enum Mode {
    AUTO,
    MANUAL,
  }

  @interface Meta {
    String label();
  }
}

@interface Nested {
  String name();

  boolean enabled() default false; // enabled marker
}

diagnostics:
(none)
