crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__broken_method_parameters_and_throws.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Runner {
  public Runner() throws IOException, TimeoutException {
  }

  public Runner(Request request, ExecutionContext executionContext)
    throws /* ctor */ IOException, // io
      TimeoutException {
  }

  public Result compute(
    Request request,
    ExecutionContext executionContext,
    RetryPolicy retryPolicy
  )
    throws /* checked */ IOException, // io
      TimeoutException {
  }
}

diagnostics:
(none)
