crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__broken_record_components.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
record CustomerProfile(
  String displayName,
  CustomerIdentifier primaryIdentifier,
  CommunicationPreferences communicationPreferences
) {
}

diagnostics:
(none)
