crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__empty_type_declarations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
interface Api {
}

record User(String name, int age) {
}

enum Color {
}

@interface Marker {
}

diagnostics:
(none)
