crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__enum_constant_arguments_and_bodies.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum Mode {
  BASIC,
  @Marker
  SPECIAL(helper(1), new Box()) {
    void run() {
    }
  },
}

diagnostics:
(none)
