crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__enum_constant_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum Color {
  // warm
  RED /* primary */, // red
  BLUE,
}

enum WithMembers {
  RED;

  // before members
  int code;
}

enum WithBlockMembers {
  RED;

  /* before members */
  int code;
}

diagnostics:
(none)
