crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__enum_constants.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum Color {
  RED,
  GREEN,
  BLUE,
}

diagnostics:
(none)
