crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__enum_constants_with_members.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum Color {
  RED,
  GREEN,
  BLUE;

  private final int code;

  public int code() {
  }
}

diagnostics:
(none)
