crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__enum_empty_constants_with_members.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum Values {
  ;

  public static final String ONE = "ONE";
}

diagnostics:
(none)
