crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__field_modifiers_and_member_spacing.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class User {
  private final String name; // user name
  public static int count; // shared count

  User() {
  }

  public void run() {
  }

  public void stop() {
  }
}

diagnostics:
(none)
